[package]
name = "dict"
version = "1.4.6"
authors = ["ede1998 <online@erik-hennig.me>"]
edition = "2018"
description = "A small command-line translator. It queries the dict.cc website for translations."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.13"
reqwest = { version = "0.11", features= ["blocking"] }
itertools = "0.10"
clap = { version = "3.2", features = ["cargo"] }
url = "2.3.1"
