[package]
name = "dict"
version = "1.4.8"
authors = ["ede1998 <online@erik-hennig.me>"]
edition = "2021"
description = "A small command-line translator. It queries the dict.cc website for translations."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.14"
reqwest = { version = "0.11", features= ["blocking"] }
itertools = "0.10"
clap = { version = "4.1", features = ["cargo", "derive"] }
url = "2.3.1"
