[package]
name = "dict"
version = "1.4.10"
authors = ["ede1998 <online@erik-hennig.me>"]
edition = "2021"
description = "A small command-line translator. It queries the dict.cc website for translations."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.22"
reqwest = { version = "0.12.12", features= ["blocking"] }
itertools = "0.14"
clap = { version = "4.5.23", features = ["cargo", "derive"] }
url = "2.5.4"
